// the empty line separators.

////
| 🎁🐛✨🐣🗑️
|
| https://github.com/knative/client/pull/[#]
////

## Unreleased

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| ✨
| New sink prefix "ksvc" and drop support for "svc", "service" prefixes for knative service
| https://github.com/knative/client/pull/896[#896]

| 🎁
| Add "url" output format to return service url in service describe
| https://github.com/knative/client/pull/916[#916]

| 🐛
| Fix panic for `kn source apiserver` and `kn source binding` describe with sink URI
| https://github.com/knative/client/pull/901[#901]

| 🐛
| Fix panic for `kn trigger describe` with sink URI
| https://github.com/knative/client/pull/900[#900]

| 🎁
| Group commands in usage output with `kn --help`
| https://github.com/knative/client/pull/887[#887]

| 🎁
| Add commands to manage broker resource
| https://github.com/knative/client/pull/894[#894]

| 🐣
| Refactor port field to accept port name and port
| https://github.com/knative/client/pull/915[#915]
|===

## v0.15.2 (2020-06-16)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Fix build.sh for macOS users
| https://github.com/knative/client/pull/883[#883]

| 🐛
| Return error message when using --untag with nonexistent tag
| https://github.com/knative/client/pull/880[#880]

| ✨
| Update go.mod to specify the module is go1.14
| https://github.com/knative/client/pull/866[#866]
|===

## v0.15.1 (2020-06-03)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Update flag names to `--request` and `--limit`
| https://github.com/knative/client/pull/872[#872]

| 🐛
| Fix `kn source -h`
| https://github.com/knative/client/pull/846[#846]

| ✨
| Update to Knative serving and eventing 0.15.0
| https://github.com/knative/client/pull/810[#810]

| 🎁
| Add `--ce-override` flag for apiserver and ping sources
| https://github.com/knative/client/pull/865[#865]

| 🐣
| Check `deletionTimestamp` for `kn revision delete`