@@ -46,6 +46,13 @@ const (
 
 {{end}}`
 
+	// sectionPlugins lists all plugins (if any)
+	sectionPlugins = `{{$plugins := listPlugins .}}{{ if ne (len $plugins) 0}}Plugins:
+{{trimRight $plugins}}
+
+{{end}}
+`
+
 	// sectionFlags is the help template section that displays the command's flags.
 	sectionFlags = `{{$visibleFlags := visibleFlags .}}{{ if $visibleFlags.HasFlags}}Options:
 {{trimRight (flagsUsages $visibleFlags)}}
@@ -74,6 +81,7 @@ func usageTemplate() string {
 		sectionExamples,
 		sectionCommandGroups,
 		sectionSubCommands,
+		sectionPlugins,
 		sectionFlags,
 		sectionUsage,
 		sectionTipsHelp,
